--- a/web/src/components/Header.module.scss
+++ b/web/src/components/Header.module.scss
@@ -1,54 +1,145 @@
 @import "../styles/utils";
 
 .mainHeader {
-  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
   top: 0;
   left: 0;
-  right: inherit;
-  width: 100%;
+  width: 100vw;
+  height: 128px;
+  padding-top: 24px;
   z-index: 100;
-
-  background-color: rgba(0, 0, 0, 0.3);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-
-  height: 90px;
 }
 
 .ci {
   position: absolute;
   left: 50%;
-  top: 23px;
+  transform: translateX(-50%);
   width: 140px;
-  height: 90px;
-  margin: 0 0 0 -70px;
-  padding: 0;
+  padding-top: 8px;
 }
 
 .ci a {
   display: block;
   width: 140px;
-  height: 47px;
+  height: 46px;
   margin: 0;
   padding: 0;
   font-size: 0;
   line-height: 0;
-  background-image: url(../assets/images/logo_white.png);
+  background: url(../assets/images/logo_white.png) center/contain no-repeat;
 }
 
 .utilArea {
   display: flex;
   justify-content: space-between;
+  position: absolute;
+  top: 16px;
+  width: 1200px;
   ul {
     display: flex;
   }
 }
 
-nav {
-  .gnbList {
-    display: flex;
-    justify-content: space-around;
-    position: relative;
-    width: 1100px;
-    margin: 90px auto 0 auto;
+.leftArea,
+.rightArea {
+  display: flex;
+  column-gap: 24px;
+  a {
+    font-size: 14px;
+    color: #888;
+  }
+}
+
+.gnbList {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  width: 1200px;
+  margin: auto;
+}
+
+.gnbTitle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: 52px;
+  link,
+  svg {
+    fill: #fff;
+  }
+  a {
+    font-size: 18px;
+    color: #fff;
+  }
+  a::after {
+    content: "";
+    box-sizing: border-box;
+    position: absolute;
+    left: 0;
+    bottom: 12px;
+    margin: 0 auto;
+    width: 0;
+    height: 1px;
+    background-color: #fff;
+    transition: all 0.3s;
+  }
+  &:nth-of-type(4) {
+    margin-right: 112px;
+  }
+  &:nth-of-type(5) {
+    margin-left: 112px;
+  }
+  &:hover {
+    a::after {
+      width: 100%;
+    }
+    .gnbBody {
+      display: flex;
+    }
+  }
+}
+
+.leftGnb,
+.rightGnb {
+  display: flex;
+  svg,
+  div {
+    width: 52px;
+    height: 52px;
+    fill: #fff;
+  }
+}
+
+.gnbSearch {
+  background: url(../assets/images/icon_search.svg) center/contain no-repeat;
+  background-size: 60%;
+}
+
+.gnbCalendar {
+  background: url(../assets/images/icon_calendar.svg) center/contain no-repeat;
+  background-size: 60%;
+}
+
+.gnbPerson {
+  background: url(../assets/images/icon_person.svg) center/contain no-repeat;
+  background-size: 60%;
+}
+
+.gnbBody {
+  display: none;
+  flex-direction: column;
+  row-gap: 8px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 200%;
+  transform: translateY(100%);
+  li {
+    color: #fff;
+    font-size: 14px;
   }
 }
