--- a/web/src/styles/utils.scss
+++ b/web/src/styles/utils.scss
@@ -1,3 +1,11 @@
+@import url("https://fonts.googleapis.com/css2");
+
+@font-face {
+  font-family: "GmarketSans";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff")
+    format("woff");
+}
+
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -108,6 +116,9 @@ section {
 body {
   line-height: 1;
 }
+a {
+  text-decoration-line: none;
+}
 ol,
 ul {
   list-style: none;
@@ -151,6 +162,8 @@ html {
 }
 
 body {
+  width: 100%;
+  height: 100%;
   overflow: auto;
   overflow-y: scroll;
   letter-spacing: 0;
@@ -158,5 +171,12 @@ body {
   font-size: 15px;
   color: #444;
   font-weight: 400;
-  font-family: NanumBarunGothic, Dotum, "돋움", sans-serif;
+  font-family: "GmarketSans", -apple-system, BlinkMacSystemFont, system-ui,
+    Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR",
+    "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
+    sans-serif;
+  // font-family: "Pretendard Variable", Pretendard, -apple-system,
+  //   BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI",
+  //   "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji",
+  //   "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
 }
