--- a/web/src/pages/Main.scss
+++ b/web/src/pages/Main.scss
@@ -1,5 +1,84 @@
 .mainContainer {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
   width: 100vw;
   height: 100vh;
-  background: black;
+  padding-top: 152px;
+  background: #000;
+}
+
+.HeroBanner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: 1280px;
+  height: 88%;
+  color: #fff;
+}
+
+.bannerBg {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  right: 0;
+  height: 100%;
+  opacity: 0.8;
+  overflow: hidden;
+  img {
+    height: 100%;
+  }
+}
+.bannerGrad {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    90deg,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(0, 0, 0, 0) 50%,
+    rgba(0, 0, 0, 0) 100%
+  );
+}
+
+.bannerCont {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  z-index: 1;
+  width: 1200px;
+  height: 100%;
+  padding: 80px 0;
+  .title {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+.titleLogo {
+  width: fit-content;
+  height: 240px;
+  margin-bottom: 24px;
+}
+.titleKor {
+  font-size: 56px;
+  font-weight: bold;
+}
+.titleEng {
+  font-size: 24px;
+}
+
+.ticketing {
+  width: 180px;
+  height: 48px;
+  border-radius: 8px;
+  font-size: bold;
+  border: #fff solid 1px;
+  background: transparent;
+  color: #fff;
+  font-size: 16px;
 }
