[퍼블리싱] 기본 버튼 ani 작업 중

--- a/web/src/styles/utils.scss
+++ b/web/src/styles/utils.scss
@@ -203,3 +203,58 @@ h1 {
 h2 {
   font-size: 24px;
 }
+
+// button
+$speed: 0.5s;
+.primaryBtn {
+  position: relative;
+  display: inline-block;
+  width: 192px;
+  height: 48px;
+  border-radius: 8px;
+  border: var(--color-primary-variant) solid 1px;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  color: #fff;
+  background: var(--color-primary);
+  opacity: 1;
+  &:hover {
+    &:after {
+      opacity: 1;
+      transform: translateY(0) rotateX(0);
+    }
+    &:before {
+      opacity: 0;
+      transform: translateY(50%) rotateX(90deg);
+    }
+  }
+  &:after {
+    top: 0;
+    left: 0;
+    opacity: 0;
+    width: 100%;
+    color: #323237;
+    display: block;
+    transition: $speed;
+    position: absolute;
+    background: #adadaf;
+    content: attr(data-back);
+    transform: translateY(-50%) rotateX(90deg);
+  }
+
+  &:before {
+    top: 0;
+    left: 0;
+    opacity: 1;
+    color: #adadaf;
+    display: block;
+    padding: 0 30px;
+    line-height: 40px;
+    transition: $speed;
+    position: relative;
+    background: #323237;
+    content: attr(data-front);
+    transform: translateY(0) rotateX(0);
+  }
+}
