[퍼블리싱] header white 배경 버전

--- a/web/src/styles/utils.scss
+++ b/web/src/styles/utils.scss
@@ -20,6 +20,8 @@
   --color-text: #4e4e4e;
   --color-text-dark: #000000;
 
+  --color-text-white: #ffffff;
+
   --color-success: #178ff6;
   --color-error: #ef4a52;
   --color-warning: #da9500;
