--- a/web/src/styles/utils.scss
+++ b/web/src/styles/utils.scss
@@ -255,16 +255,20 @@ main {
 }
 
 // button
-$btnSpeed: 0.5s;
+$btnSpeed: 0.4s;
 .primaryBtn {
   position: relative;
   display: inline-block;
-  width: 192px;
-  height: 48px;
   padding: 0;
   border: 0;
+  width: 192px;
+  height: 48px;
   background: transparent;
   opacity: 1;
+  &.long {
+    width: 400px;
+    height: 48px;
+  }
   &:hover {
     &:after {
       opacity: 1;
@@ -289,14 +293,14 @@ $btnSpeed: 0.5s;
     transition: $btnSpeed;
   }
   &:after {
-    content: attr(data-back);
+    content: attr(data-text);
     position: absolute;
     background: var(--color-primary);
     transform: translateY(-50%) rotateX(90deg);
     opacity: 0;
   }
   &:before {
-    content: attr(data-front);
+    content: attr(data-text);
     position: relative;
     background: var(--color-primary-variant);
     transform: translateY(0) rotateX(0);
