--- a/web/src/components/Header.module.scss
+++ b/web/src/components/Header.module.scss
@@ -1,15 +1,17 @@
 @import "../styles/utils";
 
 .mainHeader {
-  position: relative;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
   height: 128px;
   z-index: 10000;
+  backdrop-filter: blur(4px);
 }
 
 .layout {
+  @include flex($justifyContent: space-between);
   height: 100%;
 }
 
@@ -18,6 +20,7 @@
   column-gap: 72px;
   align-items: center;
 }
+
 .rightCont {
   display: flex;
   column-gap: 24px;
@@ -52,9 +55,13 @@
 .areaLink {
   display: flex;
   column-gap: 24px;
+  color: $color-text-light;
   a {
     font-size: 14px;
-    color: var(--color-text-light);
+    color: $color-text-light;
+    &:hover {
+      color: $color-text-white;
+    }
   }
 }
 
@@ -72,11 +79,11 @@
   position: relative;
   link,
   svg {
-    fill: var(--color-text);
+    fill: $color-text;
   }
   a {
     font-size: 18px;
-    color: var(--color-text);
+    color: $color-text;
   }
   a::after {
     content: "";
@@ -87,7 +94,7 @@
     margin: 0 auto;
     width: 0;
     height: 1px;
-    background-color: var(--color-text);
+    background-color: $color-text;
     transition: all 0.3s;
   }
   &:hover {
@@ -106,7 +113,7 @@
   div {
     width: 52px;
     height: 52px;
-    fill: var(--color-text);
+    fill: $color-text;
   }
 }
 
@@ -137,10 +144,10 @@
   width: 200%;
   transform: translateY(100%);
   li {
-    color: var(--color-text);
+    color: $color-text;
     font-size: 14px;
     white-space: pre;
-    color: var(--color-text-light);
+    color: $color-text-light;
     &:hover {
       display: flex;
     }
@@ -150,8 +157,9 @@
   }
 }
 
-.mainHeader.white {
-  background: #000000;
+// colorMode
+.mainHeader.dark {
+  background-color: $color-primary-opacity-90;
   .ci a {
     background: url(../../public/logo_white.png) center/contain no-repeat;
   }
@@ -159,16 +167,16 @@
     link,
     svg,
     a {
-      color: var(--color-text-white);
+      color: $color-text-white;
     }
     a::after {
-      background-color: var(--color-text-white);
+      background-color: $color-text-white;
     }
   }
   .gnbAll {
     svg,
     div {
-      fill: var(--color-text-white);
+      fill: $color-text-white;
     }
   }
 }
